--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderDetailVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderDetailVC.xib
@@ -1,12 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MailOrderDetailVC">
             <connections>
+                <outlet property="myTableView" destination="Fto-XD-neA" id="HC8-Zo-ovL"/>
+                <outlet property="statusBtn" destination="AMR-W7-3sx" id="Gom-2g-z5U"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +20,52 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Fto-XD-neA">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Pa4-Fl-u2Q"/>
+                        <outlet property="delegate" destination="-1" id="Nbx-Gp-q57"/>
+                    </connections>
+                </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qHQ-Oa-N2a">
+                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AMR-W7-3sx">
+                            <rect key="frame" x="294" y="10" width="65" height="25"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="25" id="blj-LA-gkq"/>
+                                <constraint firstAttribute="width" constant="65" id="rOn-7U-8t3"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <state key="normal" title="再次购买">
+                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </state>
+                            <connections>
+                                <action selector="statusAction:" destination="-1" eventType="touchUpInside" id="pdq-VA-wux"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="AMR-W7-3sx" firstAttribute="centerY" secondItem="qHQ-Oa-N2a" secondAttribute="centerY" id="1pQ-I3-5g5"/>
+                        <constraint firstAttribute="height" constant="44" id="Z9h-uZ-bya"/>
+                        <constraint firstAttribute="trailing" secondItem="AMR-W7-3sx" secondAttribute="trailing" constant="16" id="hh9-74-06p"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Fto-XD-neA" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="B6a-wf-533"/>
+                <constraint firstItem="Fto-XD-neA" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="HFC-VS-yh3"/>
+                <constraint firstItem="qHQ-Oa-N2a" firstAttribute="top" secondItem="Fto-XD-neA" secondAttribute="bottom" id="R1m-vM-m3d"/>
+                <constraint firstAttribute="trailing" secondItem="Fto-XD-neA" secondAttribute="trailing" id="dR2-yn-RES"/>
+                <constraint firstItem="qHQ-Oa-N2a" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ey5-Xf-4r6"/>
+                <constraint firstAttribute="trailing" secondItem="qHQ-Oa-N2a" secondAttribute="trailing" id="jwm-ji-eba"/>
+                <constraint firstAttribute="bottom" secondItem="qHQ-Oa-N2a" secondAttribute="bottom" id="q4I-gQ-N2D"/>
+            </constraints>
+            <point key="canvasLocation" x="-685" y="71"/>
         </view>
     </objects>
 </document>
